[gd_scene load_steps=9 format=2]

[ext_resource path="res://texture/cards/card_base.png" type="Texture" id=1]
[ext_resource path="res://texture/cards/cards_image/br-156.png" type="Texture" id=2]
[ext_resource path="res://texture/cards/card_base_back.png" type="Texture" id=3]
[ext_resource path="res://texture/cards/card_type.png" type="Texture" id=4]
[ext_resource path="res://texture/fonts/main_font_godot_file.tres" type="DynamicFont" id=5]
[ext_resource path="res://code/card_logic/card_base.gd" type="Script" id=6]
[ext_resource path="res://texture/cards/card_base_frame.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0666667, 0.137255, 0.180392, 1 )

[node name="card" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CardBase" type="MarginContainer" parent="."]
margin_left = -124.0
margin_top = -177.0
margin_right = 124.0
margin_bottom = 177.0

[node name="bars" type="VBoxContainer" parent="CardBase"]
margin_right = 248.0
margin_bottom = 354.0
size_flags_stretch_ratio = 0.0
custom_constants/separation = 0

[node name="stats" type="HBoxContainer" parent="CardBase/bars"]
margin_right = 248.0
margin_bottom = 23.0
rect_min_size = Vector2( 248, 23 )
custom_constants/separation = 24

[node name="icon" type="Control" parent="CardBase/bars/stats"]
margin_right = 69.0
margin_bottom = 23.0
rect_min_size = Vector2( 69, 23 )

[node name="Sprite" type="Sprite" parent="CardBase/bars/stats/icon"]
position = Vector2( 34, 10 )
texture = ExtResource( 4 )
hframes = 3

[node name="attack" type="Control" parent="CardBase/bars/stats"]
margin_left = 93.0
margin_right = 128.0
margin_bottom = 23.0
rect_min_size = Vector2( 35, 23 )

[node name="text" type="Label" parent="CardBase/bars/stats/attack"]
margin_top = 5.0
margin_right = 40.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.0666667, 0.137255, 0.180392, 1 )
custom_fonts/font = ExtResource( 5 )
text = "6"

[node name="speed" type="Control" parent="CardBase/bars/stats"]
margin_left = 152.0
margin_right = 187.0
margin_bottom = 23.0
rect_min_size = Vector2( 35, 23 )

[node name="text" type="Label" parent="CardBase/bars/stats/speed"]
margin_left = 1.0
margin_top = 5.0
margin_right = 41.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.0666667, 0.137255, 0.180392, 1 )
custom_fonts/font = ExtResource( 5 )
text = "10"

[node name="defence" type="Control" parent="CardBase/bars/stats"]
margin_left = 211.0
margin_right = 248.0
margin_bottom = 23.0
rect_min_size = Vector2( 37, 23 )

[node name="text" type="Label" parent="CardBase/bars/stats/defence"]
margin_left = -4.0
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.0666667, 0.137255, 0.180392, 1 )
custom_fonts/font = ExtResource( 5 )
text = "3"

[node name="image" type="Control" parent="CardBase/bars"]
margin_top = 23.0
margin_right = 248.0
margin_bottom = 114.0
rect_min_size = Vector2( 248, 91 )

[node name="Sprite" type="Sprite" parent="CardBase/bars/image"]
texture = ExtResource( 2 )
centered = false

[node name="name" type="Control" parent="CardBase/bars"]
margin_top = 114.0
margin_right = 248.0
margin_bottom = 136.0
rect_min_size = Vector2( 248, 22 )

[node name="text" type="Label" parent="CardBase/bars/name"]
margin_left = 4.0
margin_top = 5.0
margin_right = 60.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "BR—156"

[node name="discription" type="VBoxContainer" parent="CardBase/bars"]
margin_top = 136.0
margin_right = 248.0
margin_bottom = 354.0
rect_min_size = Vector2( 248, 218 )
custom_constants/separation = 5

[node name="main" type="HBoxContainer" parent="CardBase/bars/discription"]
margin_right = 248.0
margin_bottom = 126.0

[node name="Control" type="Control" parent="CardBase/bars/discription/main"]
margin_bottom = 126.0

[node name="dis" type="VBoxContainer" parent="CardBase/bars/discription/main"]
margin_left = 4.0
margin_right = 248.0
margin_bottom = 126.0

[node name="header" type="Label" parent="CardBase/bars/discription/main/dis"]
margin_right = 244.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Атака:"

[node name="Control" type="Control" parent="CardBase/bars/discription/main/dis"]
margin_top = 13.0
margin_right = 244.0
margin_bottom = 13.0

[node name="text" type="Label" parent="CardBase/bars/discription/main/dis"]
margin_top = 17.0
margin_right = 244.0
margin_bottom = 122.0
custom_colors/font_color = Color( 0.0666667, 0.137255, 0.180392, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Я ебу собак, всегда готов, тра
хнуть сразу несколько котов
да я зоофил не говори
лучше мне собачку подари
мне собачку трахнуть утром 
мало, надо утром вечером и
днём, у меня вчера змея соса-
ла, а сегодня я ебусь с ежом
я ебу собак"

[node name="Control2" type="Control" parent="CardBase/bars/discription/main/dis"]
margin_top = 126.0
margin_right = 244.0
margin_bottom = 126.0

[node name="separation_line" type="Panel" parent="CardBase/bars/discription"]
margin_top = 131.0
margin_right = 248.0
margin_bottom = 133.0
rect_min_size = Vector2( 248, 2 )
custom_styles/panel = SubResource( 1 )

[node name="reaction" type="HBoxContainer" parent="CardBase/bars/discription"]
margin_top = 138.0
margin_right = 248.0
margin_bottom = 168.0

[node name="Control" type="Control" parent="CardBase/bars/discription/reaction"]
margin_bottom = 30.0

[node name="dis" type="VBoxContainer" parent="CardBase/bars/discription/reaction"]
margin_left = 4.0
margin_right = 67.0
margin_bottom = 30.0

[node name="header" type="Label" parent="CardBase/bars/discription/reaction/dis"]
margin_right = 63.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Защита:"

[node name="Control" type="Control" parent="CardBase/bars/discription/reaction/dis"]
margin_top = 13.0
margin_right = 63.0
margin_bottom = 13.0

[node name="text" type="Label" parent="CardBase/bars/discription/reaction/dis"]
margin_top = 17.0
margin_right = 63.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.0666667, 0.137255, 0.180392, 1 )
custom_fonts/font = ExtResource( 5 )

[node name="Control2" type="Control" parent="CardBase/bars/discription/reaction/dis"]
margin_top = 30.0
margin_right = 63.0
margin_bottom = 30.0

[node name="focus" type="TextureButton" parent="."]
margin_left = -128.0
margin_top = -181.0
margin_right = 128.0
margin_bottom = 181.0
rect_scale = Vector2( 1, 3 )
texture_normal = ExtResource( 7 )

[node name="card_back" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[connection signal="button_down" from="focus" to="." method="_on_focus_button_down"]
[connection signal="button_up" from="focus" to="." method="_on_focus_button_up"]
[connection signal="mouse_entered" from="focus" to="." method="_on_focus_mouse_entered"]
[connection signal="mouse_exited" from="focus" to="." method="_on_focus_mouse_exited"]
